--- a/css/styles.css
+++ b/css/styles.css
@@ -8,18 +8,41 @@
 --color-logo-second: #000000;
 }
 
-*{
+h1,
+h2,
+h3,
+h4,
+p {
+    margin: 0;
+}
+
+ul {
+    list-style: none;
     margin: 0;
     padding: 0;
 }
+
+
+*{
+    margin: 0;
+    padding: 0;
+    list-style: 0;
+    box-sizing: border-box;
+}
+
 body{
     font-family: 'Roboto', sans-serif;
     color: var(--color-background);
-
 }
 .ul{
     list-style: none;
 }
+.container {
+    width: 1200;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 .header a {
     text-decoration: none;
 }
