--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,15 @@ color: var(--color-logo-second);
     display: flex;
     flex-wrap: wrap;
     gap: 50px;
+    margin-right: 344px;
 }
+.header-contact {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;   
+}
+
 .header-nav-link {
 font-weight: 500;
 font-size: 14px;
