--- a/css/styles.css
+++ b/css/styles.css
@@ -31,10 +31,6 @@ ul {
     padding: 0;
 }
 
-img {
-    display: block;
-}
-
 *{
     margin: 0;
     padding: 0;
@@ -138,19 +134,6 @@ color: var(--color-text);
     justify-content: space-between;
 }
 
-.visually-hidden { 
-position: absolute; 
-width: 1px; 
-height: 1px; 
-margin: -1px; 
-border: 0; 
-padding: 0; 
-white-space: nowrap; 
-clip-path: inset(100%); 
-clip: rect(0 0 0 0); 
-overflow: hidden; 
-}
-
 .main {
 background-color: var(--color-background-footer);
 padding-top: 200px;
@@ -187,41 +170,6 @@ align-items: center;
 text-align: center;
 letter-spacing: 0.06em;
 color: var(--color-white);
-}
-.main-btn-portfolio-one {
-font-family: inherit;
-width: 23px;
-height: 26px;
-left: 537px;
-top: 180px;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.625;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--color-white);
-width: 73px;
-height: 38px;
-left: 512px;
-top: 174px;
-background: var(--color-change);
-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-border-radius: 4px;
-}
-.main-btn-portfolio {
-font-family: inherit;
-cursor: pointer;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.625;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--color-title);
-}
-.main-btn-portfolio:hover,
-.main-btn-portfolio:focus {
-    color: var(--color-white);
-    background-color: var(--color-change);
 }
 .projects {
     text-decoration: none;
@@ -320,11 +268,61 @@ line-height: 1.875;
 letter-spacing: 0.03em;
 color: var(--color-text);
 }
+.portfolio {
+padding-top: 94px;
+padding-bottom: 94px;
+background-color: var(--color-background);
+}
+.portfolio-title { 
+position: absolute; 
+width: 1px; 
+height: 1px; 
+margin: -1px; 
+border: 0; 
+padding: 0; 
+white-space: nowrap; 
+clip-path: inset(100%); 
+clip: rect(0 0 0 0); 
+overflow: hidden; 
+}
+
+.portfolio-btn {
+font-family: inherit;
+cursor: pointer;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.625;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--color-title);
+list-style: none;
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 8px;
+margin-bottom: 34px;
+}
+.main-btn-portfolio:hover,
+.main-btn-portfolio:focus { 
+color: var(--color-white);
+background-color: var(--color-change);
+}
+.portfolio-img {
+margin-bottom: 20px;
+}
+
+.portfolio-work {
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
+gap: 30px;  
+}
+
 .footer {
-    background-color: var(--color-background-footer);
+background-color: var(--color-background-footer);
 }
 .footer a{
-    text-decoration: none;
+text-decoration: none;
 }
 .footer-logo-color {
 font-family: 'Raleway', sans-serif;
