--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 --color-white: #FFFFFF;
 --color-logo-second: #000000;
 --color-background-team: #F5F4FA;
+--color-border: #EEEEEE;
 }
 
 *,
@@ -161,6 +162,8 @@ left: 692px;
 background: var(--color-change);
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
+border: 1px solid;
+border-color: var(--color-logo-second);
 font-weight: 700;
 font-size: 16px;
 line-height: 1.875;
@@ -273,7 +276,7 @@ padding-top: 94px;
 padding-bottom: 94px;
 background-color: var(--color-background);
 }
-.portfolio-title { 
+.visually-hidden { 
 position: absolute; 
 width: 1px; 
 height: 1px; 
@@ -287,14 +290,6 @@ overflow: hidden;
 }
 
 .portfolio-btn {
-font-family: inherit;
-cursor: pointer;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.625;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--color-title);
 list-style: none;
 display: flex;
 justify-content: center;
@@ -302,15 +297,36 @@ align-items: center;
 gap: 8px;
 margin-bottom: 34px;
 }
+
+.main-btn-portfolio {
+cursor: pointer;
+font-family: inherit;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.625;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--color-title);
+width: 130px;
+height: 38px;
+left: 957px;
+border: 1px solid;
+border-color: var(--color-border); 
+
+
+background-color: var(--color-background-team);
+border-radius: 4px;
+}
+
 .main-btn-portfolio:hover,
 .main-btn-portfolio:focus { 
 color: var(--color-white);
 background-color: var(--color-change);
+border-color: var(--color-change);
 }
 .portfolio-img {
 margin-bottom: 20px;
 }
-
 .portfolio-work {
 display: flex;
 justify-content: center;
