--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,6 @@
 --color-background-team: #F5F4FA;
 --color-border: #EEEEEE;
 }
-
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
 h1,
 h2,
 h3,
@@ -23,44 +16,45 @@ h4,
 h5,
 h6,
 p {
-    margin: 0;
+margin: 0;
 }
 
 ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+list-style: none;
+margin: 0;
+padding: 0;
 }
 
 *{
-    margin: 0;
-    padding: 0;
-    list-style: 0;
-    box-sizing: border-box;
+margin: 0;
+padding: 0;
+list-style: 0;
+box-sizing: border-box;
 }
 
 body{
-    font-family: 'Roboto', sans-serif;
-    color: var(--color-background);
+font-family: 'Roboto', sans-serif;
+color: var(--color-background);
 }
 .ul{
-    list-style: none;
+list-style: none;
 }
 .container {
-    width: 1200;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 0 auto;
+width: 1200;
+padding-left: 15px;
+padding-right: 15px;
+margin: 0 auto;
 }
 
 .page-header a {
-    text-decoration: none;
-    padding-top: 24px;
-    padding-bottom: 25px;
+text-decoration: none;
+padding-top: 24px;
+padding-bottom: 25px;
 }
 .header {
-    background-color: var(--color-white);
-    position: absolute;
+background-color: var(--color-white);
+position: absolute;
+border: var(--color-border);
 }
 .header-logo,
 .footer-logo {
@@ -374,5 +368,5 @@ color: rgba(255, 255, 255, 0.6);
 .footer-contact:focus,
 .footer-address:hover,
 .footer-address:focus {
-    color: var(--color-change);
+color: var(--color-change);
 }
