--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 --color-logo-second: #000000;
 --color-background-team: #F5F4FA;
 --color-border: #EEEEEE;
+--color-border-header: #ECECEC;
 }
 h1,
 h2,
@@ -53,7 +54,7 @@ padding-bottom: 25px;
 .header {
 background-color: var(--color-white);
 position: absolute;
-border: var(--color-border);
+border-bottom: var(--color-border-header);
 }
 .header-logo {
 font-family: 'Raleway', sans-serif;
@@ -62,15 +63,6 @@ font-size: 26px;
 line-height: 1.1923;
 letter-spacing: 0.03em;
 color: var(--color-change);
-}
-.footer-logo {
-font-family: 'Raleway', sans-serif;
-font-weight: 700;
-font-size: 26px;
-line-height: 1.1923;
-letter-spacing: 0.03em;
-color: var(--color-change);
-margin-bottom: 9px;
 }
 .header-logo-color {
 font-family: 'Raleway', sans-serif;
@@ -253,7 +245,8 @@ padding-bottom: 20px;
 padding-left: 24px;
 background-color: var(--color-white);
 border: 1px solid;
-border-color: var(--color-border);   
+border-color: var(--color-border); 
+border-top: none;  
 }
 .main-work-tema {
 font-size: 18px;
@@ -270,7 +263,7 @@ color: var(--color-text);
 .portfolio {
 padding-top: 94px;
 padding-bottom: 94px;
-background-color: var(--color-background);
+background-color: var(--color-white);
 }
 .visually-hidden { 
 position: absolute; 
@@ -290,6 +283,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 gap: 8px;
+padding: 20px 24px;
 margin-bottom: 34px;
 }
 .main-btn-portfolio {
@@ -333,6 +327,7 @@ padding-left: 24px;
 background-color: var(--color-white);
 border: 1px solid;
 border-color: var(--color-border);
+border-top: none;
 }
 
 .footer {
@@ -343,6 +338,29 @@ padding-bottom: 60px;
 .footer a{
 text-decoration: none;
 }
+.footer .container {
+display: flex;
+flex-wrap: wrap;
+flex-direction: column;
+gap: 9px;
+}
+.footer-list {
+display: flex;
+flex-wrap: wrap;
+flex-direction: column;
+gap: 9px;
+}
+
+.footer-logo {
+font-family: 'Raleway', sans-serif;
+font-weight: 700;
+font-size: 26px;
+line-height: 1.1923;
+letter-spacing: 0.03em;
+color: var(--color-change);
+margin-bottom: 20px;
+}
+
 .footer-logo-color {
 font-family: 'Raleway', sans-serif;
 font-weight: 700;
