--- a/css/styles.css
+++ b/css/styles.css
@@ -51,10 +51,9 @@ text-decoration: none;
 padding-top: 24px;
 padding-bottom: 25px;
 }
-.header {
+.page-header {
 background-color: var(--color-white);
-position: absolute;
-border-bottom: var(--color-border-header);
+border-bottom: 1px solid var(--color-border-header);
 }
 .header-logo {
 font-family: 'Raleway', sans-serif;
@@ -171,6 +170,9 @@ display: flex;
 justify-content: center;
 gap: 30px;
 }
+.main-advantage-list {
+flex-basis: calc((100% - 90px) / 4);
+}
 .main-advantage-title {
 font-size: 14px;
 line-height: 1.1428;
@@ -284,8 +286,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 gap: 8px;
-padding: 20px 24px;
-margin-bottom: 34px;
+margin-bottom: 50px;
 }
 .main-btn-portfolio {
 cursor: pointer;
@@ -296,13 +297,11 @@ line-height: 1.625;
 text-align: center;
 letter-spacing: 0.03em;
 color: var(--color-title);
-width: 130px;
-height: 38px;
-left: 957px;
 border: 1px solid;
 border-color: var(--color-border); 
 background-color: var(--color-background-team);
 border-radius: 4px;
+padding: 6px 22px;
 }
 .main-btn-portfolio:hover,
 .main-btn-portfolio:focus { 
@@ -343,15 +342,15 @@ text-decoration: none;
 display: flex;
 flex-wrap: wrap;
 flex-direction: column;
-gap: 9px;
 }
 .footer-list {
 display: flex;
 flex-wrap: wrap;
 flex-direction: column;
-gap: 9px;
 }
-
+.footer-list-list {
+margin-bottom: 9px;
+}
 .footer-logo {
 font-family: 'Raleway', sans-serif;
 font-weight: 700;
